Test hydratation class User

--- a/front-office/public/index.html
+++ b/front-office/public/index.html
@@ -76,7 +76,8 @@
 		  </button>
 		</div>
 		<div class="modal-body">
-			<form action="index.php?action=register" method="POST"> <!--TODO Compléter le action avec le bon fichier php-->
+			<!--<form action="index.php?action=register" method="POST">-->
+			<form action="./index.php" method="POST"> <!--TODO Compléter le action avec le bon fichier php-->
 				<p>	
 					<label>Entrez votre pseudo : 
 						<input type="text" name="nickname" value=""  required/>
