UserController fini, écriture du routeur en cours

--- a/front-office/public/index.html
+++ b/front-office/public/index.html
@@ -124,6 +124,9 @@
 					<label for="login--password">Tapez votre mot de passe :
 						<input type="password" name="loginPassword" placeholder="Mot de passe"  id="login--password" required/>
 					</label>
+					<label for="autoLogin">Se souvenir de moi :
+						<input type="checkbox" name="autolog" id="autoLogin">
+					</label>
 				</p>
 				<p>
 					<input type="submit" name="loginForm" value="Se connecter"/>
